force-app/main/default/objects/Borrowing_Record__c/Borrowing_Record__c.object-meta.xml
<CustomObject>
    <description>Transaction history for each checkout/return</description>
    <label>Borrowing Record</label>
    <nameField>
        <label>Borrowing Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Borrowing Records</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>