force-app/main/default/objects/Borrowing_Record__c/fields/Borrower__c.field-meta.xml
<CustomField>
    <fullName>Borrower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who borrowed it - user lookup</description>
    <inlineHelpText>Who borrowed it</inlineHelpText>
    <label>Borrower</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Borrowing_Records1</relationshipName>
    <type>Lookup</type>
</CustomField>