force-app/main/default/objects/Borrowing_Record__c/fields/Checked_Out_By__c.field-meta.xml
<CustomField>
    <fullName>Checked_Out_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Staff member who processed checkout</description>
    <inlineHelpText>Staff member who processed checkout</inlineHelpText>
    <label>Checked_Out_By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Borrowing_Records</relationshipName>
    <type>Lookup</type>
</CustomField>