force-app/main/default/objects/Borrowing_Record__c/fields/Checkout_Date__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Date__c</fullName>
    <description>When Checked Out</description>
    <inlineHelpText>When Checked Out</inlineHelpText>
    <label>Checkout_Date_</label>
    <type>DateTime</type>
</CustomField>