force-app/main/default/objects/Borrowing_Record__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>When it should be returned</description>
    <inlineHelpText>When it should be returned</inlineHelpText>
    <label>Due_Date</label>
    <type>Date</type>
</CustomField>