force-app/main/default/objects/Borrowing_Record__c/fields/Library_Item__c.field-meta.xml
<CustomField>
    <fullName>Library_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>What was borrowed</description>
    <inlineHelpText>What was borrowed</inlineHelpText>
    <label>Library Item</label>
    <referenceTo>Library_Item__c</referenceTo>
    <relationshipLabel>Borrowing Records</relationshipLabel>
    <relationshipName>Borrowing_Records</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>