force-app/main/default/objects/Borrowing_Record__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>External Item ID</description>
    <displayFormat>BR-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Name</label>
    <type>AutoNumber</type>
</CustomField>