force-app/main/default/objects/Borrowing_Record__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Special conditions or notes</description>
    <inlineHelpText>Special conditions or notes</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>