force-app/main/default/objects/Borrowing_Record__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Active, Returned, Overdue, Lost</description>
    <inlineHelpText>Active, Returned, Overdue, Lost</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Checked Out</fullName>
            </value>
            <value>
                <fullName>Checked_Out</fullName>
                <isActive>false</isActive>
                <label>Checked_Out</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>