force-app/main/default/objects/Borrowing_Record__c/validationRules/VR_No_Duplicate_Active_Checkout.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_No_Duplicate_Active_Checkout</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    TEXT(Status__c) = &apos;Checked Out&apos;,
    ISNEW(),
    Library_Item__r.Current_Borrower__c != null
)</errorConditionFormula>
    <errorMessage>This item is already Checked Out to another borrower</errorMessage>
</ValidationRule>