force-app/main/default/objects/Borrowing_Record__c/validationRules/VR_Required_Fields_For_Checkout.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Required_Fields_For_Checkout</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    TEXT(Status__c) = &apos;Checked Out&apos;,
    OR(
        ISBLANK(Borrower__c),
        ISBLANK(Library_Item__c),
        ISBLANK(Checkout_Date__c)
    )
)</errorConditionFormula>
    <errorMessage>Borrower, Library Item, and Checkout Date are required for Checked Out items</errorMessage>
</ValidationRule>