force-app/main/default/objects/Borrowing_Record__c/validationRules/VR_Valid_Return_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Valid_Return_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Return_Date__c)),
    Return_Date__c &lt; Checkout_Date__c
)</errorConditionFormula>
    <errorDisplayField>Return_Date__c</errorDisplayField>
    <errorMessage>Return date cannot be before checkout date</errorMessage>
</ValidationRule>